--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "Командный проект школы RSSchool.",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon dist/index.js",
     "lint": "eslint ./src/**/*.ts*",
-    "lint:fix": "eslint ./src/**/*.ts* --fix"
+    "lint:fix": "eslint ./src/**/*.ts* --fix",
+    "test": "ts-node ./lib/server.ts",
+    "dev": "tsc && nodemon ./dist/server.js"
   },
   "eslintConfig": {
     "extends": [
@@ -44,14 +45,21 @@
   "homepage": "https://github.com/kornienko199004/rsclone-backend#readme",
   "dependencies": {
     "body-parser": "^1.19.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "mongodb": "^3.1.10",
+    "mongoose": "^5.11.9"
   },
   "devDependencies": {
+    "@types/bcrypt": "^3.0.0",
     "@types/express": "^4.17.9",
+    "@types/jsonwebtoken": "^8.5.0",
     "@types/node": "^14.14.19",
-    "nodemon": "^2.0.6",
+    "@types/validator": "^13.1.2",
     "eslint": "^7.16.0",
     "eslint-config-airbnb": "^18.2.1",
-    "eslint-plugin-import": "^2.22.1"
+    "eslint-plugin-import": "^2.22.1",
+    "nodemon": "^2.0.6",
+    "validator": "^13.5.2",
+    "validator.ts": "^0.2.2"
   }
 }
