--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.1.10",
     "mongoose": "^5.11.9",
-    "typescript": "^3.7.4"
+    "typescript": "^3.7.4",
+    "validator": "^13.5.2",
+    "validator.ts": "^0.2.2"
   },
   "devDependencies": {
     "@types/bcrypt": "^3.0.0",
@@ -48,8 +50,6 @@
     "eslint-plugin-import": "^2.22.1",
     "nodemon": "^2.0.6",
     "prettier": "^1.19.1",
-    "tslint-config-airbnb-base": "^0.3.0",
-    "validator": "^13.5.2",
-    "validator.ts": "^0.2.2"
+    "tslint-config-airbnb-base": "^0.3.0"
   }
 }
