--- a/package.json
+++ b/package.json
@@ -5,12 +5,24 @@
   "main": "index.js",
   "scripts": {
     "start-production": "node ./dist/server.js",
-    "test": "ts-node ./lib/server.ts",
+    "test": "./node_modules/.bin/env-cmd -f ./test.env jest --runInBand --detectOpenHandles",
     "dev": "tsc && nodemon ./dist/server.js",
     "start": "tsc && nodemon ./dist/server.js",
     "format": "prettier —write \"lib/**/*.ts\" \"test/**/*.ts\"",
     "lint": "eslint \"{src,apps,lib,test}/**/*.ts\" --fix",
     "dev:watch": "nodemon lib/server.ts"
+  },
+  "jest": {
+    "testEnvironment": "node",
+    "transform": {
+      ".(ts|tsx)": "<rootDir>/node_modules/ts-jest/preprocessor.js"
+    },
+    "testRegex": "(/__tests__/.*|\\.(test|spec))\\.(ts|tsx|js)$",
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js"
+    ]
   },
   "repository": {
     "type": "git",
@@ -32,7 +44,6 @@
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.1.10",
     "mongoose": "^5.11.9",
-    "typescript": "^3.7.4",
     "validator": "^13.5.2",
     "validator.ts": "^0.2.2"
   },
@@ -40,8 +51,10 @@
     "@types/bcrypt": "^3.0.0",
     "@types/cors": "^2.8.9",
     "@types/express": "^4.17.9",
+    "@types/jest": "^26.0.20",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/node": "^14.14.19",
+    "@types/supertest": "^2.0.10",
     "@types/validator": "^13.1.2",
     "@typescript-eslint/eslint-plugin": "3.9.1",
     "@typescript-eslint/parser": "3.9.1",
@@ -50,8 +63,12 @@
     "eslint-config-airbnb-typescript": "^12.0.0",
     "eslint-config-prettier": "^6.10.0",
     "eslint-plugin-import": "^2.22.1",
+    "jest": "^26.6.3",
     "nodemon": "^2.0.6",
     "prettier": "^1.19.1",
-    "tslint-config-airbnb-base": "^0.3.0"
+    "supertest": "^6.1.3",
+    "ts-jest": "^26.5.0",
+    "tslint-config-airbnb-base": "^0.3.0",
+    "typescript": "^3.9.7"
   }
 }
